--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             </section>
         </main>
 
+    <footer class="note-footer" aria-label="Нотатки">
+        <div class="note-wrap"><p class="note-text">© 2025 Іващенко Гліб</p></div>
+    </footer>
+
     <button id="lang-toggle" class="lang-toggle" aria-label="Toggle language">UA</button>
 
         <script src="base.js" defer></script>
